--- a/src/components/composition/Wrap/Wrap.module.scss
+++ b/src/components/composition/Wrap/Wrap.module.scss
@@ -5,7 +5,7 @@ $spacings: xs, sm, md, lg, xl, fluid, fluid-lg;
 .wrap {
   margin: 0 auto;
   max-width: 90em; // 1440px
-  padding: 0 var(--spacing-md);
+  padding: 0 var(--mobius-spacing-md);
   width: 100%;
 
   @each $key, $bp in breakpoint.$map {
@@ -21,7 +21,7 @@ $spacings: xs, sm, md, lg, xl, fluid, fluid-lg;
   &--gutter {
     @each $spacing in $spacings {
       &-#{$spacing} {
-        padding-inline: var(--spacing-#{$spacing});
+        padding-inline: var(--mobius-spacing-#{$spacing});
       }
     }
 
