--- a/src/components/content/ContainerSvg/ContainerSvg.module.scss
+++ b/src/components/content/ContainerSvg/ContainerSvg.module.scss
@@ -14,7 +14,7 @@
     }
 
     &.container-svg__body--colour-transparent {
-      stroke: color.$blue-darkest;
+      stroke: var(--mobius-color-black);
     }
   }
 }
