--- a/src/components/content/LoadingSpinner/LoadingSpinner.module.scss
+++ b/src/components/content/LoadingSpinner/LoadingSpinner.module.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/variables/breakpoint';
+@use '~@etchteam/mobius-tokens/dist/breakpoint';
 
 @keyframes spin {
   0% {
@@ -13,12 +13,13 @@
 .loading-spinner {
   animation: spin 1s linear infinite;
   aspect-ratio: 1;
-  border: calc(var(--font-size-xl) * 0.2) solid var(--color-earth);
+  border: calc(var(--mobius-font-size-xl) * 0.2) solid var(--mobius-color-earth);
   border-radius: 50%;
-  border-top: calc(var(--font-size-xl) * 0.2) solid var(--color-forest);
-  height: calc(var(--font-size-xl));
+  border-top: calc(var(--mobius-font-size-xl) * 0.2) solid
+    var(--mobius-color-forest);
+  height: calc(var(--mobius-font-size-xl));
 
-  @media screen and (min-width: breakpoint.$md) {
-    height: calc(var(--font-size-xl) * 2);
+  @media screen and (min-width: breakpoint.$mobius-breakpoint-md) {
+    height: calc(var(--mobius-font-size-xl) * 2);
   }
 }
