--- a/src/components/content/Longform/Longform.module.scss
+++ b/src/components/content/Longform/Longform.module.scss
@@ -1,31 +1,31 @@
 .longform {
   h1 {
-    margin-bottom: var(--spacing-lg);
+    margin-bottom: var(--mobius-spacing-lg);
   }
 
   h2 {
-    margin-bottom: var(--spacing-md);
+    margin-bottom: var(--mobius-spacing-md);
   }
 
   h3,
   h4,
   h5 {
-    margin-bottom: var(--spacing-sm);
+    margin-bottom: var(--mobius-spacing-sm);
   }
 
   p,
   ul,
   ol {
-    margin-bottom: var(--spacing-md);
+    margin-bottom: var(--mobius-spacing-md);
   }
 
   ul,
   ol {
-    padding-left: calc(var(--font-line-height) * 1rem);
+    padding-left: calc(var(--mobius-font-line-height) * 1rem);
   }
 
   li {
-    margin-bottom: var(--spacing-sm);
+    margin-bottom: var(--mobius-spacing-sm);
 
     p:last-child {
       margin-bottom: 0;
@@ -39,7 +39,7 @@
     h3,
     h4,
     h5 {
-      margin-top: var(--spacing-lg);
+      margin-top: var(--mobius-spacing-lg);
     }
   }
 
@@ -49,6 +49,6 @@
 
   table,
   img {
-    margin: var(--spacing-lg) 0;
+    margin: var(--mobius-spacing-lg) 0;
   }
 }
