--- a/src/components/controls/Select/Select.module.scss
+++ b/src/components/controls/Select/Select.module.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/mixins/forms';
 
 .select {
-  --select-border-color: var(--input-border);
+  --select-border-color: var(--mobius-input-border);
 
   @include forms.input;
   cursor: pointer;
@@ -11,7 +11,9 @@
     @include forms.input-padding;
     max-width: 100%;
     overflow: hidden;
-    padding-right: calc(var(--spacing-thumb) + var(--input-padding-horizontal));
+    padding-right: calc(
+      var(--mobius-spacing-thumb) + var(--mobius-input-padding-horizontal)
+    );
     text-overflow: ellipsis;
 
     &[disabled] {
@@ -22,18 +24,19 @@
   &__affix {
     align-items: center;
     border-left: 1px solid var(--select-border-color);
-    border-radius: 0 var(--input-border-radius) var(--input-border-radius) 0;
+    border-radius: 0 var(--mobius-input-border-radius)
+      var(--mobius-input-border-radius) 0;
     bottom: 0;
     display: flex;
-    font-size: var(--font-size-xl);
+    font-size: var(--mobius-font-size-xl);
     justify-content: center;
-    min-width: var(--spacing-thumb);
-    padding: 0 var(--spacing-sm);
+    min-width: var(--mobius-spacing-thumb);
+    padding: 0 var(--mobius-spacing-sm);
     pointer-events: none;
     position: absolute;
     right: 0;
     top: 0;
-    transition: border-color var(--transition);
+    transition: border-color var(--mobius-transition);
   }
 
   &--disabled {
@@ -41,19 +44,19 @@
   }
 
   &--valid {
-    --select-border-color: var(--color-positive);
+    --select-border-color: var(--mobius-color-positive);
   }
 
   &--invalid {
-    --select-border-color: var(--color-negative);
+    --select-border-color: var(--mobius-color-negative);
   }
 
   &:hover {
-    --select-border-color: var(--input-border-hover);
+    --select-border-color: var(--mobius-input-border-hover);
   }
 
   &:focus-within {
-    --input-outline-offset-focus: 1px;
-    --select-border-color: var(--input-border-focus);
+    --mobius-input-outline-offset-focus: 1px;
+    --select-border-color: var(--mobius-input-border-focus);
   }
 }
