--- a/src/components/canvas/Alert/Alert.module.scss
+++ b/src/components/canvas/Alert/Alert.module.scss
@@ -1,8 +1,8 @@
 .alert {
-  background: var(--theme-background);
-  border-radius: var(--radius-md);
-  color: var(--theme-color);
-  padding: var(--spacing-md);
+  background: var(--mobius-skin-background);
+  border-radius: var(--mobius-radius-md);
+  color: var(--mobius-skin-color);
+  padding: var(--mobius-spacing-md);
 
   &__close {
     background: none;
