--- a/src/components/composition/FormGroup/FormGroup.module.scss
+++ b/src/components/composition/FormGroup/FormGroup.module.scss
@@ -1,9 +1,9 @@
 @use 'sass:math';
-@use '../../../styles/variables/breakpoint';
+@use '~@etchteam/mobius-tokens/dist/breakpoint';
 
 .form-group {
   &__label {
-    column-gap: var(--spacing-sm);
+    column-gap: var(--mobius-spacing-sm);
     display: grid;
     grid-auto-rows: min-content;
     grid-template-columns: 1fr auto;
@@ -14,8 +14,8 @@
     display: grid;
     grid-template-rows: 0fr;
     transition:
-      grid-template-rows var(--transition),
-      content-visibility var(--transition);
+      grid-template-rows var(--mobius-transition),
+      content-visibility var(--mobius-transition);
     /* stylelint-disable-next-line property-no-unknown */
     transition-behavior: allow-discrete;
 
@@ -27,10 +27,10 @@
     &-inner {
       margin-block-start: 0;
       overflow: hidden;
-      transition: margin-block-start var(--transition);
+      transition: margin-block-start var(--mobius-transition);
 
       &--open {
-        margin-block-start: var(--spacing-md);
+        margin-block-start: var(--mobius-spacing-md);
       }
     }
   }
@@ -40,8 +40,8 @@
   }
 
   &--horizontal {
-    @media (min-width: breakpoint.$tablet) {
-      column-gap: var(--spacing-md);
+    @media (min-width: breakpoint.$mobius-breakpoint-tablet) {
+      column-gap: var(--mobius-spacing-md);
       display: grid;
       grid-template-columns: 1fr 1fr;
 
