--- a/src/components/composition/List/List.module.scss
+++ b/src/components/composition/List/List.module.scss
@@ -7,29 +7,29 @@
     @include list.item;
   }
 
-  &--spacing {
+  &--mobius-spacing {
     &-none {
       --list-spacing: 0;
     }
 
     &-xs {
-      --list-spacing: var(--spacing-xs);
+      --list-spacing: var(--mobius-spacing-xs);
     }
 
     &-sm {
-      --list-spacing: var(--spacing-sm);
+      --list-spacing: var(--mobius-spacing-sm);
     }
 
     &-md {
-      --list-spacing: var(--spacing-md);
+      --list-spacing: var(--mobius-spacing-md);
     }
 
     &-lg {
-      --list-spacing: var(--spacing-lg);
+      --list-spacing: var(--mobius-spacing-lg);
     }
 
     &-xl {
-      --list-spacing: var(--spacing-xl);
+      --list-spacing: var(--mobius-spacing-xl);
     }
   }
 }
