--- a/src/components/content/Eyebrow/Eyebrow.module.scss
+++ b/src/components/content/Eyebrow/Eyebrow.module.scss
@@ -1,6 +1,6 @@
 .eyebrow {
-  color: var(--color-body-muted);
-  font-family: var(--font-family-heading);
-  font-size: var(--font-size-base);
+  color: var(--mobius-color-body-muted);
+  font-family: var(--mobius-font-family-heading);
+  font-size: var(--mobius-font-size-base);
   text-transform: uppercase;
 }
