--- a/src/components/controls/Menubar/Menubar.module.scss
+++ b/src/components/controls/Menubar/Menubar.module.scss
@@ -1,9 +1,9 @@
-@use '../../../styles/variables/breakpoint';
+@use '~@etchteam/mobius-tokens/dist/breakpoint';
 
 .menubar {
-  background: var(--theme-background);
+  background: var(--mobius-skin-background);
 
-  @media (min-width: breakpoint.$tablet) {
+  @media (min-width: breakpoint.$mobius-breakpoint-tablet) {
     align-items: center;
     display: grid;
     grid-template-columns: 10rem auto 10rem;
@@ -12,11 +12,11 @@
   &__inner {
     grid-column-start: 2;
     margin: 0 auto;
-    max-width: breakpoint.$xl; // Same as <Container>
+    max-width: breakpoint.$mobius-breakpoint-xl; // Same as <Container>
     width: 100%;
 
-    @media (min-width: breakpoint.$tablet) {
-      padding: 0 var(--spacing-md);
+    @media (min-width: breakpoint.$mobius-breakpoint-tablet) {
+      padding: 0 var(--mobius-spacing-md);
     }
   }
 
@@ -25,30 +25,31 @@
     margin: 0;
     padding: 0;
 
-    @media (min-width: breakpoint.$tablet) {
+    @media (min-width: breakpoint.$mobius-breakpoint-tablet) {
       justify-content: center;
     }
   }
 
   &__tab {
-    --tab-background: var(--theme-background);
-    --tab-highlight-color: var(--theme-color);
+    --tab-background: var(--mobius-skin-background);
+    --tab-highlight-color: var(--mobius-skin-color);
     --tab-highlight-width: 4px;
 
     display: block;
-    font-size: var(--font-size-sm);
-    font-weight: var(--font-weight-bold);
+    font-size: var(--mobius-font-size-sm);
+    font-weight: var(--mobius-font-weight-bold);
     min-width: 25%;
     position: relative;
 
     a {
-      color: var(--theme-background-muted-dark);
+      color: var(--mobius-skin-background-muted-dark);
       text-decoration: none;
-      transition: background var(--transition) color var(--transition);
+      transition: background var(--mobius-transition) color
+        var(--mobius-transition);
 
       &:hover,
       &:focus {
-        color: var(--theme-color);
+        color: var(--mobius-skin-color);
       }
 
       &:focus {
@@ -66,16 +67,17 @@
         opacity: 0;
         position: absolute;
         top: 0;
-        transition: opacity var(--transition) height var(--transition);
+        transition: opacity var(--mobius-transition) height
+          var(--mobius-transition);
         width: 100%;
       }
 
       align-items: center;
-      color: var(--theme-background-muted-dark);
+      color: var(--mobius-skin-background-muted-dark);
       display: flex;
       justify-content: center;
-      min-height: var(--spacing-thumb);
-      padding: var(--spacing-md);
+      min-height: var(--mobius-spacing-thumb);
+      padding: var(--mobius-spacing-md);
       text-align: center;
     }
 
@@ -84,36 +86,36 @@
         opacity: 1;
       }
 
-      background: var(--input-background-disabled);
-      color: var(--color-body);
+      background: var(--mobius-input-background-disabled);
+      color: var(--mobius-color-body);
 
       a {
-        color: var(--color-body);
+        color: var(--mobius-color-body);
       }
     }
 
     &--completed &-inner {
       &::before {
-        --tab-highlight-color: var(--color-positive);
+        --tab-highlight-color: var(--mobius-color-positive);
         opacity: 1;
       }
     }
 
     &-inner:focus-within::before {
-      --tab-highlight-color: var(--input-border-hover);
+      --tab-highlight-color: var(--mobius-input-border-hover);
       opacity: 1;
     }
 
     &--disabled &-inner {
-      color: var(--button-color-disabled);
+      color: var(--mobius-button-color-disabled);
     }
   }
 
   &__back {
     a {
       display: block;
-      min-height: var(--spacing-thumb);
-      padding: var(--spacing-md);
+      min-height: var(--mobius-spacing-thumb);
+      padding: var(--mobius-spacing-md);
       text-decoration: none;
     }
   }
