--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,49 +1,21 @@
-:root {
-  --font-family: var(--mobius-font-family);
-  --font-family-heading: var(--mobius-font-family-heading);
-
-  --font-line-height: var(--mobius-font-line-height);
-  --font-line-height-sm: var(--mobius-font-line-height-sm);
-  --font-line-height-lg: var(--mobius-font-line-height-lg);
-
-  --font-size-base: var(--mobius-font-size-base);
-  --font-size-xs: var(--mobius-font-size-xs);
-  --font-size-sm: var(--mobius-font-size-sm);
-  --font-size-md: var(--mobius-font-size-md);
-  --font-size-lg: var(--mobius-font-size-lg);
-  --font-size-xl: var(--mobius-font-size-xl);
-
-  --font-size-h1: var(--mobius-font-size-h1);
-  --font-size-h2: var(--mobius-font-size-h2);
-  --font-size-h3: var(--mobius-font-size-h3);
-  --font-size-h4: var(--mobius-font-size-h4);
-  --font-size-h5: var(--mobius-font-size-h5);
-  --font-size-h6: var(--mobius-font-size-h6);
-
-  --font-weight-base: var(--mobius-font-weight-base);
-  --font-weight-light: var(--mobius-font-weight-light);
-  --font-weight-bold: var(--mobius-font-weight-bold);
-  --font-weight-black: var(--mobius-font-weight-black);
-}
-
 $sizes: (
-  'base': var(--font-size-base),
-  'xs': var(--font-size-xs),
-  'sm': var(--font-size-sm),
-  'md': var(--font-size-md),
-  'lg': var(--font-size-lg),
-  'xl': var(--font-size-xl),
-  'h1': var(--font-size-h1),
-  'h2': var(--font-size-h2),
-  'h3': var(--font-size-h3),
-  'h4': var(--font-size-h4),
-  'h5': var(--font-size-h5),
-  'h6': var(--font-size-h6),
+  'base': var(--mobius-font-size-base),
+  'xs': var(--mobius-font-size-xs),
+  'sm': var(--mobius-font-size-sm),
+  'md': var(--mobius-font-size-md),
+  'lg': var(--mobius-font-size-lg),
+  'xl': var(--mobius-font-size-xl),
+  'h1': var(--mobius-font-size-h1),
+  'h2': var(--mobius-font-size-h2),
+  'h3': var(--mobius-font-size-h3),
+  'h4': var(--mobius-font-size-h4),
+  'h5': var(--mobius-font-size-h5),
+  'h6': var(--mobius-font-size-h6),
 );
 
 $weights: (
-  'base': var(--font-weight-base),
-  'light': var(--font-weight-light),
-  'bold': var(--font-weight-bold),
-  'black': var(--font-weight-black),
+  'base': var(--mobius-font-weight-base),
+  'light': var(--mobius-font-weight-light),
+  'bold': var(--mobius-font-weight-bold),
+  'black': var(--mobius-font-weight-black),
 );
